--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Display Inline</title>
 </head>
 <body>
-    
+    <main>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum magni minima sint a quam, voluptates ad ipsa voluptas odio veritatis quod, natus, dolor dolorem nisi expedita! Eveniet est praesentium quos.
+        </div>
+
+        <div>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio molestiae cumque ipsa repellendus magnam animi exercitationem veniam asperiores, adipisci quae maiores at culpa, nisi qui eaque, optio velit officia quis.
+        </div>
+
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, animi laboriosam molestiae nihil explicabo eum asperiores tempora magnam dignissimos quos sed illum omnis eius vero labore beatae ex totam atque.
+        </div>
+    </main>
 </body>
 </html>
